loadbalancer/IngressRoute-homeassistant-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-dashboard-route
  namespace: loadbalancer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homeassistant.anderwerse.de`)
      services:
        - name: homeassistant
          namespace: homeassistant
          port: 8123
  tls:
    secretName: anderwersede-tls-certificate
